# panbiotracks

./: .gitignore  README.md  adj_matrix.py  amatrix.py  gentracks.py  indtracks.py  indtracks_test.py  main_prototype.py  main_prototype_args.py  nodes.py  panbiotracks.py  pseudogentracks.py  pyproject.toml
assets/pinusquercus20_batch/: Pinus aristata.shp  Pinus aristata.shx  Pinus arizonica.shp  Pinus arizonica.shx  Pinus ayacahuite.shp  Pinus ayacahuite.shx  Pinus culminicola.shp  Pinus culminicola.shx  Pinus devoniana.shp  Pinus devoniana.shx  Pinus douglasiana.shp  Pinus douglasiana.shx  Pinus durangensis.shp  Pinus durangensis.shx  Pinus engelmannii.shp  Pinus engelmannii.shx  Pinus greggii.shp  Pinus greggii.shx  Pinus hartwegii.shp  Pinus hartwegii.shx  Pinus herrerae.shp  Pinus herrerae.shx  Pinus jaliscana.shp  Pinus jaliscana.shx  Pinus lawsonii.shp  Pinus lawsonii.shx  Pinus leiophylla.dbf  Pinus leiophylla.shp  Pinus leiophylla.shx  Pinus lumholtzii.shp  Pinus lumholtzii.shx  Pinus luzmariae.shp  Pinus luzmariae.shx  Pinus maximartinezii.shx  Pinus maximinoi.shp  Pinus maximinoi.shx  Pinus montezumae.shp  Pinus montezumae.shx  Pinus oocarpa.shp  Pinus oocarpa.shx  (+170 more)
assets/pinusquercus30_batch/: Pinus aristata.shp  Pinus aristata.shx  Pinus arizonica.shp  Pinus arizonica.shx  Pinus ayacahuite.shp  Pinus ayacahuite.shx  Pinus culminicola.shp  Pinus culminicola.shx  Pinus devoniana.shp  Pinus devoniana.shx  Pinus douglasiana.shp  Pinus douglasiana.shx  Pinus durangensis.shp  Pinus durangensis.shx  Pinus greggii.shp  (+191 more)
experiments/: empty_geoseries_checker.py  gentracks_list_generator.py  indtracks_multiple.py  select_points.py  select_points_rdp_test.py
jupyter/: gentracks_proto.ipynb
modules/: __init__.py  algorithms.py  amatrix.py  functions.py  prim.py  shp_writer.py
test/: compare_polylines.py  gentracks_list_generator.py  geo_dist_approximations.py  localities_reader.py  select_points.py  select_points_rdp_test.py
testing_ground/: gt_testing.py  gt_testing_2.py
