[tool.poetry]
name = "Panbiotracks"
version = "0.1.0"
description = "A program to do track analysis for panbiogeography."
authors = ["Carlos Fernando Castillo <cfcastillo@tutanota.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
vincenty = "^0.1.4"
numpy = "^1.24.2"
pandas = "^1.5.3"
pyshp = "^2.3.1"
fiona = "^1.9.1"
shapely = "^2.0.1"
geopandas = "^0.14.0"
ogr = "^0.44.0"
gdal = "3.7.*"
rdp = "^0.8"
pyinstaller = "^6.8.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
