[project]
name = "Panbiotracks"
version = "0.2.4"
description = "A program to do track analysis for panbiogeography."
readme = "README.md"
authors = [
    {name = "Carlos Fernando Castillo", email = "cfcastillo@tutanota.com"}
    ]
requires-python = "~=3.10, <3.15"
dependencies = [
    "vincenty ~=0.1.4",
    "numpy ~=2.2",
    "pandas ~=2.1",
    "pyshp ~= 2.3",
    "fiona ~= 1.10",
    "shapely ~= 2.0",
    "geopandas ~= 1.0",
    "gdal ~= 3.7.0",
    "pyinstaller ~= 6.8"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
