[project]
name = "Panbiotracks"
version = "0.2.5"
description = "A program to do track analysis for panbiogeography."
readme = "README.md"
authors = [
    {name = "Carlos Fernando Castillo", email = "cfcastillo@tutanota.com"}
    ]
requires-python = ">=3.11,<3.14.1 || >3.14.1,<3.15"
dependencies = [
    "vincenty ~=0.1.4",
    "numpy ~=2.2",
    "pandas ~=2.1",
    "pyshp ~= 2.3",
    "shapely ~= 2.0",
    "geopandas ~= 1.0",
    "pyinstaller ~= 6.8",
    "pyogrio (>=0.11.1,<0.12.0)",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "networkx (>=3.6.1,<4.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "shapely (>=2.1.2,<3.0.0)"
]
